@@ -9,6 +9,7 @@ AnyEvent::Inotify::Simple - monitor a directory tree in a non-blocking way
 
     my $inotify = AnyEvent::Inotify::Simple->new(
         directory      => '/tmp/uploads/',
+        wanted_events  => [ qw(create move) ],
         event_receiver => sub {
             my ($event, $file, $moved_to) = @_;
             given($event) {
@@ -27,7 +28,8 @@ This module is a wrapper around [Linux::Inotify2](https://metacpan.org/pod/Linux
 with an [AnyEvent](https://metacpan.org/pod/AnyEvent) event loop and makes monitoring a directory
 simple.  Provide it with a `directory`, `event_receiver`
 ([AnyEvent::Inotify::Simple::EventReceiver](https://metacpan.org/pod/AnyEvent%3A%3AInotify%3A%3ASimple%3A%3AEventReceiver)), and an optional coderef
-`filter`, and it will monitor an entire directory tree.  If something
+`filter` and/or optional array ref `wanted_events`, and it will
+monitor an entire directory tree.  If something
 is added, it will start watching it.  If something goes away, it will
 stop watching it.  It also converts `IN_MOVE_FROM` and `IN_MOVE_TO`
 into one virtual event.
