@@ -5,6 +5,8 @@ Change history for AnyEvent-Inotify-Simple
   - don't consume a ton of memory and CPU in response to unexpected events
   - ignore overflow events rather than entering the (heavy) unexpected event
     handler for them when there's nothing we can do anyway (thanks Rob Mueller!)
+  - added wanted_events, to filter events in the kernel before watchers receive
+    them (thanks Rob Mueller!)
 
 0.03      2014-06-09 20:56:31+10:00 Australia/Melbourne
   - handle new file disappearing quickly while we're checking to see if its a
